# mind-vault-app

./: .gitignore  jest.config.js  package-lock.json  package.json
.claude/agents/agent-os/: api-engineer.md  backend-verifier.md  database-engineer.md  frontend-verifier.md  product-planner.md  spec-researcher.md  spec-verifier.md  spec-writer.md  tasks-list-creator.md  testing-engineer.md  ui-designer.md
agent-os/: config.yml
agent-os/standards/ai-integration/: cloud-ai-integration.md  context-management.md  local-ai-models.md  performance-optimization.md  privacy-security.md  ui-patterns.md
agent-os/standards/data/: local-storage.md  (+2 more)
apps/mobile/: package.json
docs/: foliate-js-analysis.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/__mocks__/: uuid.js
src/ai/: ai-service.ts  index.ts  learning-science.ts  physical-learning.ts  question-answering.ts  types.ts
src/app/: layout.tsx  page.tsx
src/components/: Button.tsx
src/highlighting/: highlight-renderer.ts  highlight-service.ts  highlight-type-service.ts  index.ts  text-selection.ts  types.ts
src/lib/: database.ts
src/navigation/: index.tsx
src/notes/: index.ts  note-editor.tsx  note-service.ts  note-type-service.ts  types.ts
src/parsers/: content-extractor.ts  demo.ts  epub.ts  epubcfi.ts  index.ts  loader.ts  metadata-extractor.ts  mobi-loader.ts  mobi.ts  pdf-loader.ts  pdf.ts  types.ts  unified-parser.ts
src/performance/: file-system.ts  index.ts  mobile-optimization.ts  performance-monitor.ts  types.ts
src/test-utils/: setup.ts  test-utils.tsx
(+88 files in other folders)
